--- a/index.html
+++ b/index.html
@@ -585,13 +585,11 @@
               <label for="name-email">Підпишіться на розсилку</label>
               <input type="text" id="name-email" placeholder="E-mail" />
             </div>
-            <div class="footer-form-button">
-              <button class="footer-form-button-text" type="submit">
-                Підписатися<svg class="button-send" width="24" height="24">
-                  <use href="./images/icons.svg#icon-send"></use>
-                </svg>
-              </button>
-            </div>
+            <button class="footer-form-button" type="submit">
+              Підписатися<svg class="button-send" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
