--- a/index.html
+++ b/index.html
@@ -579,16 +579,16 @@
           </ul>
         </div>
         <div class="footer-e-mail">
+          <span class="footer-label"
+            ><label for="name-email">Підпишіться на розсилку</label></span
+          >
           <form class="footer-form">
-            <div class="form-found">
-              <label for="name-email">Підпишіться на розсилку</label>
-              <input type="text" id="name-email" placeholder="E-mail" />
-              <button class="footer-form-button" type="submit">
-                Підписатися<svg class="button-send" width="24" height="24">
-                  <use href="./images/icons.svg#icon-send"></use>
-                </svg>
-              </button>
-            </div>
+            <input type="text" id="name-email" placeholder="E-mail" />
+            <button class="footer-form-button" type="submit">
+              Підписатися<svg class="button-send" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
