--- a/portfolio.html
+++ b/portfolio.html
@@ -311,12 +311,12 @@
           </ul>
         </div>
         <div class="footer-e-mail">
-          <form class="form footer-form">
-            <div class="form-found">
-              <label for="name-email">Підпишіться на розсилку</label>
-              <input type="text" id="name-email" placeholder="E-mail" />
-            </div>
-            <button class="footer-form-button-text" type="submit">
+          <span class="footer-label"
+            ><label for="name-email">Підпишіться на розсилку</label></span
+          >
+          <form class="footer-form">
+            <input type="text" id="name-email" placeholder="E-mail" />
+            <button class="footer-form-button" type="submit">
               Підписатися<svg class="button-send" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
