--- a/index.html
+++ b/index.html
@@ -493,9 +493,8 @@
                 <a href="" class="form-link">Умови договору</a>
               </label>
             </div>
-            <div class="form-button">
-              <button class="form-button-text" type="submit">Відправити</button>
-            </div>
+
+            <button class="form-button" type="submit">Відправити</button>
           </form>
         </div>
       </div>
